# report_maker

./: .gitignore  MANIFEST.in  README.md  convert_xlsm.py  polarion_config.ini  polarion_report_maker.py  post_method.json  post_test_case_execution_to_polarion.json  post_test_run_to_polarion.json  pyproject.toml  report_template.css  requirements.txt  setup.bat  setup.cfg  setup.py
doc/: conftest_template.py  polarion_config_template.ini  test_module_template.py  test_runner_template.bat
test_documents/: TestSpecification_Example.xlsx  project_test_cases.xlsx
test_reports/: Test_Report_example.html
tests/: conftest.py  test_example.bat  test_example.py
