[metadata]
name = dc-polarion_report_maker
version = 1.2.0
author = Jakub Suchecki
author_email = jakub.suchecki@diehl.com
description = "Report generator and Test Run maker for Polarion"
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
   Homepage = "https://github.com/DiehlControlsSoftware/internal-pypkg-dc-polarion_report_maker"

[options]
py_modules = polarion_report_maker
include_package_data = True
python_requires = >=3.9
install_requires =
   pandas
   beautifulsoup4
   httpx
   configparser
   pytest
   pytest-html
packages=
   polarion_report_maker_doc
package_dir=
   polarion_report_maker_doc=doc





